# 3122-harness

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  harness.toml
.github/workflows/: release.yml
.harness/: mcp.json
.harness/commands/: recap.toml  review-risk.toml
.harness/skills/project-bootstrap/: SKILL.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent.rs  approvals.rs  commands.rs  config.rs  context.rs  discovery.rs  envfile.rs  lib.rs  mcp.rs  memory.rs  permissions.rs  portable_memory.rs  profiles.rs  provider.rs  session.rs  skills.rs  tools.rs  trajectory.rs  verifier.rs
docs/: AMCP_MEMORY_STRENGTHENING_DIRECTIVE_2026-04-13.md  AMCP_NATIVE_MEMORY_DIRECTIVE_2026-04-10.md  ARCHITECTURE.md  PROMPT_RUNTIME_AUDIT.md  ROADMAP.md
scripts/: install.sh  mock_mcp_echo.js  run_provider_matrix.sh
