[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
time = { version = "=0.3.36", features = ["formatting", "parsing"] }
toml = "0.8"
